<resources>
    <string name="app_name">FTF Mobile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="settings">Paramètres</string>
    <string name="language">La langue</string>
    <string name="langName">Français</string>

    <string name="cancel">Annuler</string>

    <string name="_list_format">Le format de présentation des actualités et des albums</string>
    <string name="card_format">Cartes</string>
    <string name="list_format">Liste</string>



    <string name="news">Actualités</string>
    <string name="allnews">Toutes les actualités</string>
    <string name="league1">Ligue 1</string>
    <string name="league2">Ligue 2</string>
    <string name="league3">Ligue 3</string>
    <string name="ntd">Direction technique</string>
    <string name="referees_choices">Désignation des arbitres</string>

    <string name="multimedia">Multimédia</string>
    <string name="a_photos">Albums photos</string>
    <string name="a_videos">Albums vidéos</string>

    <string name="natteam">L\'équipe national</string>

    <string name="events">L\'évennement</string>
    <string name="appointments">Les rendez-vous</string>
    <!--<string name="langQuest">هل تريد عادة تشغيل التطبيق لتغيير اللغة ؟</string>-->
    <string name="lanChDiagTitle">Changement de la langue</string>
    <string name="ranking">Classement</string>
    <string name="calres">Calendrier et résultats</string>
    <string name="poff_ranking">Classement playoff</string>
    <string name="gen_calendar">Calendrier général</string>

    <string name="pout_ranking">Classement playout</string>
    <string name="poff_calres">Calendrier et résultats playoff</string>
    <string name="pout_calres">Calendrier et résultats playout</string>

    <string name="netpb_title">Probléme de connexion</string>
    <string name="netpb_msg">Veuillez vérifier vos paramètres réseau!</string>
    <string name="verify">Vérifier</string>
    <string name="exit">Quiter</string>

    <string name="m_share">Partager</string>
    <string name="m_coypurl">Copier le lien</string>

    <string name="l_round">Journée</string>
    <string name="l_group">Groupe</string>

    <string name="l1_rk_grpa">Classement Ligue 1 Groupe A</string>
    <string name="l1_rk_grpb">Classement Ligue 1 Groupe B</string>
    <string name="l1_rk_poff">Classement Ligue 1 playoff</string>
    <string name="l1_rk_pout">Classement Ligue 1 playout</string>

    <string name="l2_rk_grpa">Classements Ligue 2 Poule A</string>
    <string name="l2_rk_grpb">Classements Ligue 2 Poule B</string>


    <string name="pbconn_website">Problème de connexion au site</string>
    <string name="nondispo_website">Le serveur web est injoignable pour le moment, veuillez réessayer ultérieurement.</string>
    <string name="link_copied">Le lien a été copié !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="badurl_title">Lien invalide</string>
    <string name="badurl_msg">Nous sommes désolé, le lien est invalide !</string>

    <string-array name="l_groups">
        <item name="l_g_a">A</item>
        <item name="l_g_b">B</item>
    </string-array>

</resources>
