<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/header" android:checkableBehavior="single">

        <item
            android:id="@+id/mNews"
            android:title="@string/news" />

        <!--android:icon="@drawable/ic_menu_gallery"-->
        <item
            android:id="@+id/mleague1"

            android:title="@string/league1"
            />

        <!--android:icon="@drawable/ic_menu_slideshow"-->

        <item
            android:id="@+id/mleague2"
            android:title="@string/league2"

            />

        <!--android:icon="@drawable/ic_menu_manage"-->
        <item
            android:id="@+id/mnatteam"

            android:title="@string/natteam" />
        <item
            android:id="@+id/m_multimedia"

            android:title="@string/multimedia" />


        <!--        <item
                    android:id="@+id/mleague_reg"

                    android:title="@string/leaguereg" />

                <item
                    android:id="@+id/mWomensFoot"

                    android:title="@string/womensfoot" />-->
        <!--        <item
                    android:id="@+id/nav_camera"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="Import" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="Gallery" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="Slideshow" />
                <item
                    android:id="@+id/nav_manage"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="Tools" />-->
    </group >

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->
    <group android:id="@+id/footer">
        <item
            android:id="@+id/app_settings"
            android:title="@string/settings"
            android:icon="@drawable/settings_icon" />
    </group>
</menu>
