<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.AppBarOverlay"
    tools:context="com.foot.basicdrawer.Navigation.Act_Settings">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--        <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView1" />
                -->


        <LinearLayout
            android:id="@+id/s_lang_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/language"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/s_curr_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/langName"
                android:textColor="#808080"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#808080"
            android:orientation="horizontal"
            />

        <LinearLayout
            android:id="@+id/s_ltype_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/_list_format"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/s_curr_list_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#808080"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#808080"
            android:orientation="horizontal"
            />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/settings_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorAccent"
        app:itemTextColor="@color/nav_menu_itemcolor"
        app:menu="@menu/options_menu">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
